# robot_suite_v2

./: .gitignore  Dockerfile  README.md  bootstrap.sh  detected_objects.csv  docker-compose.yml  entryfile.sh  mkdocs.yml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: foxy_ci.yaml  humble_ci.yaml  iron_ci.yaml  jazzy_ci.yaml
config/: spot.yaml  tello.yaml
docker/spot/: Dockerfile
docker/tello/: Dockerfile
docs/: 1.installation.md  3.docker.md  9.contribute.md  index.md
docs/GettingStarted/: contribute.md  docker.md  installation.md
docs/Home/: index.md
docs/Plugins/: index.md  plugin_base.md
docs/📦 Packages/: 3.plugin_base.md  4.tello_control_station.md  plugin_server_base.md  tello_app.md  tello_bt.md  tello_driver.md  tello_msgs.md
docs/🧩 Plugins/: hand_gestures.md  index.md
object_review_llm/: package.xml  setup.cfg  setup.py
object_review_llm/object_review_llm/: csv_object_review_node.py
plugin_server_base/: README.md
plugin_server_base/plugin_server_base/: package.xml
plugin_server_base/plugin_server_base/config/: params.yaml
plugin_server_base/plugin_server_base/plugin_server_base/: plugin_base.py
plugin_server_base/plugin_services/: CMakeLists.txt  package.xml
plugin_server_base/plugin_services/srv/: PluginServer.srv
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/config/: params.yaml  spot_driver_params.yaml
robot_bringup/launch/: spot_launch.py  system_launch.py
robot_bt/: README.md  package.xml  setup.cfg  setup.py
robot_bt/config/: params.yaml
robot_bt/launch/: robot_bt_launch.py
robot_bt/robot_bt/: bootstrap.py  bt_server_node.py
robot_bt/robot_bt/behaviours/shared/actions/: __init__.py  plugin_client.py
robot_bt/robot_bt/behaviours/shared/conditions/: __init__.py  can_run_plugin.py  is_battery_low.py
robot_bt/robot_bt/behaviours/spot/actions/: __init__.py  sit_action.py  spot_gestures_interpreter_action.py
robot_bt/robot_bt/behaviours/spot/conditions/: __init__.py  is_battery_low.py  is_robot_connected.py
robot_bt/robot_bt/behaviours/tello/actions/: __init__.py  gestures_interpreter_action.py  land_action.py  remote_operator.py
robot_bt/robot_bt/behaviours/tello/conditions/: __init__.py
robot_bt/robot_bt/bt/: default_bt.py  spot_bt.py
robot_bt/robot_bt/llm/: llm_interface.py
robot_bt/robot_bt/nodes/: __init__.py  plugin_client.py
robot_bt/robot_bt/nodes/actions/: action.py  gestures_interpreter_action.py  land_action.py  remote_operator.py
robot_bt/robot_bt/nodes/conditionals/: is_battery_low.py
robot_interfaces/: CMakeLists.txt  package.xml
robot_plugins/hand_gestures_plugin/hand_gestures/: setup.py
robot_plugins/hand_gestures_plugin/hand_gestures/config/: params.yaml
robot_plugins/hand_gestures_plugin/hand_gestures/hand_gestures/: landmark_detector_node.py
robot_plugins/hand_gestures_plugin/hand_gestures/hand_gestures/models/: template.py
robot_plugins/hand_gestures_plugin/hand_gestures/launch/: hand_gestures_launch.py
robot_plugins/hand_gestures_plugin/hand_gestures_msgs/: CMakeLists.txt  package.xml
robot_plugins/hand_gestures_plugin/hand_gestures_msgs/msg/: Landmark.msg
robot_plugins/plugin_base/: README.md  package.xml  setup.cfg  setup.py
robot_plugins/plugin_base/config/: params.yaml
robot_plugins/plugin_base/plugin_base/: plugin_base.py
robot_plugins/plugin_base/plugin_server_base/: setup.cfg  setup.py
robot_plugins/plugin_base/plugin_services/: package.xml
robot_plugins/plugin_base/test/: test_plugin_base.py
robot_suite/: CMakeLists.txt  package.xml
spot_object_recognition/: package.xml  setup.cfg  setup.py
spot_object_recognition/spot_object_recognition/: spot_object_recognition_node.py
tello_app/: main.py
tello_app/static/: mainPage.js  script.js  style.css  wifiPage.js
tello_app/templates/: index.html
tello_bringup/: CMakeLists.txt  package.xml
tello_bringup/config/: params.yaml
tello_bringup/launch/: system_launch.py
tello_bt/: package.xml  setup.cfg  setup.py
tello_bt/config/: params.yaml
tello_bt/tello_bt/: behavior.py  bootstrap.py  bt_server.py  bt_server_node.py  plugin_client.py  tree.py
tello_bt/tello_bt/actions/: action.py  can_run_plugin.py  is_battery_low.py  remote_operator.py
tello_bt/tello_bt/bt/: default_bt.py  simple_bt.py
tello_bt/tello_bt/nodes/: __init__.py
tello_bt/tello_bt/nodes/conditionals/: is_drone_connected.py
tello_control_station/: README.md  package.xml  setup.cfg  setup.py
tello_control_station/config/: params.yaml
tello_control_station/launch/: tello_control_station_launch.py
tello_control_station/tello_control_station/: control_station.py  control_station_node.py  gamepad_utils.py  interface.py  video_container.py
tello_driver/: package.xml
tello_driver/tello_driver/: tello_driver.py
tello_msgs/: package.xml
tello_plugins/hand_gestures_plugin/: CHANGELOG.md  README.md
tello_plugins/hand_gestures_plugin/hand_gestures/: package.xml
tello_plugins/hand_gestures_plugin/hand_gestures/hand_gestures/: helpers.py  landmark_annotator_node.py  landmark_detector_node.py
tello_plugins/hand_gestures_plugin/hand_gestures/hand_gestures/models/: mp_model.py
tello_plugins/hand_gestures_plugin/hand_gestures_msgs/msg/: Landmarks.msg
tello_plugins/hand_gestures_plugin/tello_sign_interpreter/: package.xml  setup.cfg  setup.py
tello_plugins/hand_gestures_plugin/tello_sign_interpreter/tello_sign_interpreter/: tello_sign_interpreter_node.py
tello_suite/: package.xml
