<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.1.0</version>
  <description>BringUp package for the robot suite.</description>
  <maintainer email="snt-arg@github.com">snt-arg</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>tello_driver</exec_depend>
  <exec_depend>robot_bt</exec_depend>
  <exec_depend>tello_control_station</exec_depend>
  <exec_depend>hand_gestures</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
