<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bt</name>
  <version>0.1.0</version>
  <description>A behavior tree for the robot suite</description>
  <maintainer email="snt-arg@github.com">snt-arg</maintainer>
  <license>GPL-3.0</license>

  <depend>python3-pytrees</depend>
  <depend>python3-pygame</depend>
  <depend>rclpy</depend>
  <depend>plugin_base</depend>
  <depend>robot_interfaces</depend>
  <depend>hand_gestures_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
