<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tello_suite</name>
  <version>1.0.1</version>
  <description>Tello Suite</description>
  <maintainer email="snt-arg@github.com">snt-arg</maintainer>
  <license>GPL3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>tello_driver</exec_depend>
  <exec_depend>robot_bt</exec_depend>
  <exec_depend>tello_msgs</exec_depend>
  <exec_depend>tello_nav</exec_depend>
  <exec_depend>tello_bringup</exec_depend>
  <exec_depend>plugin_server_base</exec_depend>
  <exec_depend>tello_bringup</exec_depend>
  <exec_depend>tello_control_station</exec_depend>
  <exec_depend>hand_gestures</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
