<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tello_control_station</name>
  <version>0.0.0</version>
  <description>A control station for tello</description>
  <maintainer email="maxime@todo.todo">maxime</maintainer>
  <license>MIT</license>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tello_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>plugin_server_base</depend>
  <depend>python3-numpy</depend>
  <depend>python3-pygame</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
