<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tello_suite</name>
  <version>0.0.0</version>
  <description>Tello Suite</description>
  <maintainer email="snt-arg@github.com">snt-arg</maintainer>
  <license>GPL3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>tello_driver</exec_depend>
  <exec_depend>tello_bt</exec_depend>
  <exec_depend>tello_msgs</exec_depend>
  <exec_depend>tello_nav</exec_depend>
  <exec_depend>tello_bringup</exec_depend>
  <!-- <exec_depend>tello_app</exec_depend> -->
  <!-- <exec_depend>tello_descriptions</exec_depend> -->
  <!-- <exec_depend>tello_plugins</exec_depend> -->


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
