<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plugin_server_base</name>
  <version>0.0.1</version>
  <description>A plugin base class which is used for communication with a BT.</description>
  <maintainer email="pmbs.123@gmail.com">Pedro Soares</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>plugin_services</depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>unittest</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
